tests/ui/consts/const-eval/const_panic.stderr
error[E0080]: evaluation panicked: cheese
  --> $DIR/const_panic.rs:7:15
   |
LL | const Z: () = std::panic!("cheese");
   |               ^^^^^^^^^^^^^^^^^^^^^ evaluation of `Z` failed here

error[E0080]: evaluation panicked: explicit panic
  --> $DIR/const_panic.rs:10:16
   |
LL | const Z2: () = std::panic!();
   |                ^^^^^^^^^^^^^ evaluation of `Z2` failed here

error[E0080]: evaluation panicked: internal error: entered unreachable code
  --> $DIR/const_panic.rs:13:15
   |
LL | const Y: () = std::unreachable!();
   |               ^^^^^^^^^^^^^^^^^^^ evaluation of `Y` failed here

error[E0080]: evaluation panicked: not implemented
  --> $DIR/const_panic.rs:16:15
   |
LL | const X: () = std::unimplemented!();
   |               ^^^^^^^^^^^^^^^^^^^^^ evaluation of `X` failed here
   |
   = note: this error originates in the macro `std::unimplemented` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0080]: evaluation panicked: hello
  --> $DIR/const_panic.rs:19:15
   |
LL | const W: () = std::panic!(MSG);
   |               ^^^^^^^^^^^^^^^^ evaluation of `W` failed here

error[E0080]: evaluation panicked: hello
  --> $DIR/const_panic.rs:22:16
   |
LL | const W2: () = std::panic!("{}", MSG);
   |                ^^^^^^^^^^^^^^^^^^^^^^ evaluation of `W2` failed here

error[E0080]: evaluation panicked: cheese
  --> $DIR/const_panic.rs:25:20
   |
LL | const Z_CORE: () = core::panic!("cheese");
   |                    ^^^^^^^^^^^^^^^^^^^^^^ evaluation of `Z_CORE` failed here

error[E0080]: evaluation panicked: explicit panic
  --> $DIR/const_panic.rs:28:21
   |
LL | const Z2_CORE: () = core::panic!();
   |                     ^^^^^^^^^^^^^^ evaluation of `Z2_CORE` failed here

error[E0080]: evaluation panicked: internal error: entered unreachable code
  --> $DIR/const_panic.rs:31:20
   |
LL | const Y_CORE: () = core::unreachable!();
   |                    ^^^^^^^^^^^^^^^^^^^^ evaluation of `Y_CORE` failed here

error[E0080]: evaluation panicked: not implemented
  --> $DIR/const_panic.rs:34:20
   |
LL | const X_CORE: () = core::unimplemented!();
   |                    ^^^^^^^^^^^^^^^^^^^^^^ evaluation of `X_CORE` failed here
   |
   = note: this error originates in the macro `core::unimplemented` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0080]: evaluation panicked: hello
  --> $DIR/const_panic.rs:37:20
   |
LL | const W_CORE: () = core::panic!(MSG);
   |                    ^^^^^^^^^^^^^^^^^ evaluation of `W_CORE` failed here

error[E0080]: evaluation panicked: hello
  --> $DIR/const_panic.rs:40:21
   |
LL | const W2_CORE: () = core::panic!("{}", MSG);
   |                     ^^^^^^^^^^^^^^^^^^^^^^^ evaluation of `W2_CORE` failed here

error: aborting due to 12 previous errors

For more information about this error, try `rustc --explain E0080`.
